2003-06-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/Makefile.in: hp5400 doesn't need sanei_config2.

2003-05-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.fr.po: Fixed two wrong codings of accented
	  characters.
	* backend/net.c: Fixed bug concerning hosts that have both IPv6
	  and IPv4 addresses but only accept connections on IPv4. Patch
	  from Julien BLACHE <jb@jblache.org>.
	* doc/descriptions/net.desc: Mention IPv6. Bump version number.

2003-05-27  Frank Zago  <fzago at austin dot rr dot com>

	* PROJECTS: Changed entry for win32 SANE project.

2003-05-28  Henning Meier-Geinitz <henning@meier-geinitz.de>
	
	* doc/descriptions/unsupported.html: Added link for Umax astra 4700.

2003-05-27  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in: Don't disable IPv6 if poll is not
	  found.
	* frontend/saned.c: Use u_int_* instead of uint_*. That fixes
	  compilation for MacOS X (hopefully).
	* doc/Makefile.in: Add option -nodepage to man2html to avoid
	  missing lines in the html output.
	* doc/descriptions/unsupported.html: Added link for Spot scanners.

2003-05-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in: Warnings enabled again. Added -cvs to
	  version.

Older entries can be found in ChangeLog-1.0.12.